# loteria

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
dia-de-sorte/: README.md  analisar_diadesorte.py  fetch_diadesorte.py  pyproject.toml
dia-de-sorte/dados/sample/: diadesorte_1183.json  diadesorte_1184.json  diadesorte_1185.json  diadesorte_1186.json  diadesorte_1187.json  diadesorte_1188.json  diadesorte_1189.json  diadesorte_1190.json  diadesorte_1191.json  diadesorte_1192.json  diadesorte_1193.json  diadesorte_1194.json  diadesorte_1195.json  diadesorte_1196.json  diadesorte_1197.json
dia-de-sorte/docs/: 01_equilibrio_par_impar.md  02_equilibrio_baixo_alto.md  03_controle_de_soma.md  04_numeros_quentes_frequencia.md  05_numeros_atrasados.md  06_consecutivos.md  07_repeticoes_concurso_anterior.md  08_cobertura_em_bolao.md  09_mes_da_sorte.md  2026-04-07-analisador-diadesorte.md  api-doc.md
dia-de-sorte/testes/integracao/: test_api_caixa.py  test_banco.py  test_cli_dados.py
dia-de-sorte/testes/unidade/: test_analise_script.py  test_entidades.py  test_leitor.py  test_regras.py
dia-de-sorte/tests/: test_analise.py
lotofacil/: .dockerignore  .gitignore  Dockerfile  PRD.md  README.md  backtest_peso_ml.py  conftest.py  dados  deploy.sh  docker-compose.yml  entrypoint.sh  predict_15_from_11.py  predict_portfolio.py  pyproject.toml  requirements.txt
lotofacil/.claude-flow/data/: pending-insights.jsonl
lotofacil/dados/clima/: clima_2026-05-04.json  clima_concurso3625-2026-03-02.json  clima_concurso3626-2026-03-03.json  clima_concurso3627-2026-03-04.json  clima_concurso3628-2026-03-05.json  clima_concurso3629-2026-03-06.json  (+46 more)
lotofacil/docs/: 100-cada-RELATORIO_COMPLETO_VALIDACAO_ML_3500_3580.md  DASHBOARD-OVERVIEW.md  Hierarquia de Estratégias na Lotofácil: Análise de Precedência e Impacto Estatístico.md  PRD-dashboard.md  Relatório Técnico_ Estratégias Racionais para a Lotofácil.md  architecture.md  curl.md  development.md  dicionario_dados_ml.md
lotofacil/legacy/: README.md
lotofacil/ml/: backtest_classificador.py  features_classificador.py  padroes_21.py  predizer_combinado.py  predizer_jogo.py  treino_classificador.py
lotofacil/output/: kpi_report.json
lotofacil/scripts/: analisar_ganhadores.py  analisar_top3_jogos.py  build_ml_dataset.py  collect.py  gerar_md_mirofish.py  jogo_sem_15_acertos.py  melhor_jogo_por_faixa.py  otimizar_dados_mirofish.py  prever_proximo.py  process.py  train_modelo_ordem.py  validate_kpis.py  validate_neural.py  validate_neural_15.py  volume-backup.sh  volume-migrate-local.sh  volume-restore.sh
lotofacil/src/: __init__.py  main.py
lotofacil/src/cli/: app.py  (+4 more)
lotofacil/tasks/: BACKLOG.md  README.md
lotofacil/tests/: test_cli_smoke.py  test_core.py  test_portfolio.py
quina/: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
super-sete/: .gitignore  README.md  analise_estatistica.py  busca_sorteios.py  gerar_3_jogos.py  pyproject.toml
super-sete/docs/: Relatório de Análise do Super Sete da Loteria Federal.md
(+645 files in other folders)
