[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diadesorte"
version = "0.1.0"
description = "Sistema de coleta e análise de dados para a Dia de Sorte"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "responses>=0.23.0",
]

[project.scripts]
diadesorte = "diadesorte.interface.cli.app:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["diadesorte*"]

[tool.pytest.ini_options]
testpaths = ["testes"]
