[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quina-prediction"
version = "0.1.0"
description = "Sistema de coleta e analise de dados para a Quina"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "responses>=0.23.0",
]

[project.scripts]
quina = "quina.interface.cli.app:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["quina*"]

[tool.pytest.ini_options]
testpaths = ["testes"]
